--- a/portfolio/templates/portfolio/home.html
+++ b/portfolio/templates/portfolio/home.html
@@ -1,29 +1,40 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <title>Novell Services Login</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-</head>
-<body>
-<div class="container mt-3">
-    <h1> Welcome to my Portfolio </h1>
-    {% for project in projects %}
-    <h2>{{ project.title }}</h2>
-    <ul class="list-group">
-      <li class="list-group-item">{{ project.description }}</li>
-      <li class="list-group-item">
-        <img src="{{ project.image.url }}" alt="{{ project.description }}" height="80" width="80">
-      </li>   
-      {% if project.url %} 
-      <li class="list-group-item">
-        <a href="{{ project.url }}">Link</a>
-      </li>
-      {% endif %}
-    </ul>
-    {% endfor %}
+{% extends "portfolio/base.html" %}
+
+{% load static %}
+
+{% block content %}
+
+<div class="row justify-content-center my-3">
+  <div class="col-5">
+    <img src="{% static 'portfolio/cdcfe.jpeg' %}" class="img-fluid">
+  </div>
 </div>
-</body>
-</html>
+
+<div class="row justify-content-center mb-3">
+  <div class="col-md-9 text-center">
+    <h1 id="hometext" class="font-weight-bold">Eva is a teacher at IES San Clemente 😊</h1>
+  </div>
+</div>
+
+<h2 class="mt-5">Portfolio</h2>
+<hr>
+<div class="row">
+  {% for project in projects %}
+  <div class="col-lg-4 col-md-6">
+
+    {% if project.url %}
+    <a href="{{ project.url }}">
+      <img src="{{ project.image.url }}" class="img-fluid mb-2">
+    </a>
+    {% else %}
+
+    <img src="{{ project.image.url }}" class="img-fluid mb-2">
+    {% endif %}
+    <h3>{{ project.title }}</h3>
+    <p>{{ project.description }}</p>
+
+  </div>
+  {% endfor %}
+</div>
+
+{% endblock %}
