--- a/portfolio/templates/portfolio/home.html
+++ b/portfolio/templates/portfolio/home.html
@@ -12,7 +12,7 @@
 
 <div class="row justify-content-center mb-3">
   <div class="col-md-9 text-center">
-    <h1 id="hometext" class="font-weight-bold">Eva is a teacher at IES San Clemente 😊</h1>
+    <h1 id="hometext" class="font-weight-bold">Eva is a teacher at IES San Clemente</h1>
   </div>
 </div>
 
